clearing up styling and fixing census readability (1/2)

--- a/res/default.css
+++ b/res/default.css
@@ -954,6 +954,43 @@ a.link.collapse:hover {
 }
 
 /*--------------------------------------
+                Village
+---------------------------------------*/
+
+.census-block {
+    border: 1px solid gray;
+	margin-bottom: 5px;
+	padding: 5px;
+	min-height: 80px;
+}
+
+
+.census-block .info {
+    padding-bottom: 5px;
+}
+
+.census-block .skill{
+    font-size: 0.8em;
+}
+   
+.census-block .color-brown {
+    color:#856341;
+}
+.census-block .color-cream {
+    color:lightcoral;
+}
+.census-block .color-black {
+    color:darkgrey;
+}
+.census-block .color-fawn {
+    color:gainsboro;
+}
+.census-block .color-white {
+    color:floralwhite
+}
+
+
+/*--------------------------------------
                 Map
 --------------------------------------*/
 
@@ -1386,28 +1423,4 @@ div.leet {
     0 0 15px red,
     0 0 20px red,
     0 0 25px red;}
-}
-
-.census-block {
-    border: 1px solid gray;
-    margin-bottom: 5px;
-    padding: 5px;
-    min-height: 80px;
-}
-
-   
-.census-block .color-brown {
-    color:#856341;
-}
-.census-block .color-cream {
-    color:lightcoral;
-}
-.census-block .color-black {
-    color:darkgrey;
-}
-.census-block .color-fawn {
-    color:gainsboro;
-}
-.census-block .color-white {
-    color:floralwhite
 }
